# MLOps

./: Makefile  README.md  app.dockerfile  data.dvc  models.dvc  pyproject.toml  requirements.txt  requirements_test.txt  trainer.dockerfile
.dvc/: config
.github/: test.yml
.github/workflows/: test.yml  tests.yml
app/: main.py
deployment/: deploy_predict.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
model1-open-text-books/runs/Jan10_15-42-40_Christophers-MacBook-Pro.local/: events.out.tfevents.1704897761.Christophers-MacBook-Pro.local.244.0
model1-open-text-books/runs/Jan10_15-59-59_Christophers-MacBook-Pro.local/: events.out.tfevents.1704898799.Christophers-MacBook-Pro.local.781.0
model1-open-text-books/runs/Jan10_16-00-22_Christophers-MacBook-Pro.local/: events.out.tfevents.1704898822.Christophers-MacBook-Pro.local.800.0
model1-open-text-books/runs/Jan10_16-02-52_Christophers-MacBook-Pro.local/: events.out.tfevents.1704898972.Christophers-MacBook-Pro.local.916.0
model1-open-text-books/runs/Jan10_16-04-14_Christophers-MacBook-Pro.local/: events.out.tfevents.1704899054.Christophers-MacBook-Pro.local.963.0
models/: model.py
notebooks/: Thor_Version_GPT_2_Fine_Tuning_w_Hugging_Face_&_PyTorch.ipynb  colab.ipynb
project_name/: config.yaml  predict_model.py  train_model.py
project_name/data/: dataclass.py  make_dataset.py
project_name/models/: model.py
project_name/visualizations/: visualize.py
reports/: README.md
tests/: test_data.py  test_model.py  test_pred.py  test_training.py
(+2 files in other folders)
